--- a/Assignment 1/q_1/android/app/src/main/AndroidManifest.xml
+++ b/Assignment 1/q_1/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Add the Internet permission -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:label="q_1"
         android:name="${applicationName}"
