--- a/Assignment 1/q_1/pubspec.yaml
+++ b/Assignment 1/q_1/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_animate: ^4.5.0
+  mailer: ^6.1.0
+  enough_mail: ^2.1.6
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
